Index cleanup and get rid of appendix 3.

--- a/latex/chapter-appendix1.tex
+++ b/latex/chapter-appendix1.tex
@@ -1,7 +1,6 @@
-\chapter{Lerma's Appendix}
-\index{Appendix!Lerma's Appendix@\emph{Lerma's Appendix}}%
-The source \LaTeX{} file for this document is no longer quoted in
-its entirety in the output document. A \LaTeX{} file can 
-include its own source by using the command
-\cn{verbatiminput\{\cn{jobname}\}}.
+\chapter{Speakur source code example}
+\index{Appendix!Speakur source code@\emph{Speakur source code}}%
+
+This index may contain an example of Speakur's source code...
+
 
