--- a/latex/chapter-appendix2.tex
+++ b/latex/chapter-appendix2.tex
@@ -1,25 +1,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{My Appendix \#2}
-\index{Appendix!My Appendix \#2@\emph{My Appendix \#2}}%
-\section{The First Section}
-This is the first section.
-This is the second appendix.
+\chapter{Open Source Credits}
+\index{Appendix!Open Source credits@\emph{Open Source credits}}%
 
-\section{The Second Section}
-This is the second section of the second appendix.
+Speakur would not have been possible without the following open source components:
 
-\subsection{The First Subsection of the Second Section}
-This is the first subsection of the second section of the second appendix.
-
-\subsection{The Second Subsection of the Second Section}
-This is the second subsection of the second section of the second appendix.
-
-\subsubsection{The First Subsubsection of the Second Subsection of
-		the Second Section}
-This is the first subsubsection of the second subsection of the
-second section of the second appendix.
-
-\subsubsection{The Second Subsubsection of the Second Subsection
-		of the Second Section}
-This is the second subsubsection of the second subsection of the
-second section of the second appendix.
+\begin{itemize}
+\item Polymer\index{Polymer} framework~\cite{polymercontributors2015}
+\item Firebase\index{Firebase} database service and client library~\cite{firebasecontributors2015}
+\item Marked\index{Marked library} library
+\item i18next\index{i18next library} library
+\item moment.js\index{moment.js library} library
+\end{itemize}
