--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -27,7 +27,7 @@ The Hyper\-text Markup Language (HTML)
 \index{HTML}
 standard has proven wildly successful since its introduction in 1993 by British computer scientist 
 Tim Berners-Lee, 
-\index{Tim Berners-Lee}
+\index{Berners-Lee, Tim}
 with billions and billions of pages served, 
 and hundreds of millions of public and private web sites forming a major part of our information landscape~\cite{internetlivestats.com2015}.
 More than any other invention, other than perhaps email, the World Wide Web (WWW) has shaped how we see and use the global network.
@@ -47,7 +47,7 @@ The original and current Document Object Model (DOM)
 browser abstraction provided by HTML does not allow for significant decoupling; 
 everything lives together on one big page. Hacks like the 
 \tcode{<iframe>} 
-\index{iframe}
+\index{<iframe>}
 tag let you work around some of these restrictions, usually in a limited and inelegant way.
 
 At the time of HTML's introduction the concept of quickly and easily composing a static web page, 
@@ -167,12 +167,12 @@ A few quantitative results are included, I hope \textbf{(TODO)}.
 Finally, the Conclusion section is there and wraps up the report with various words \textbf{(TODO)}. 
 
 \section{Source Code and Demonstration Resources}
-\index{Source Code and Demonstration Resources@\emph{Source Code and Demonstration Resources}}%
+\index{Speakur source code@\emph{Speakur source code}}%
 
 The source code for Speakur consists of HTML\index{HTML} and Javascript\index{Javascript} files located in a Git\index{Git} version control repository. 
 These files constitute an ``HTML Import''\index{HTML Imports} package that provides a
 \textbf{\tcode{<speakur-discussion>}}
-custom HTML element\index{Custom Element} for the use of web authors in their own pages.
+custom HTML element\index{Custom Elements} for the use of web authors in their own pages.
 An example of using \tcode{<speakur-discussion>} is given in Chapter 3 and in briefly in Listing~\ref{example1} below.
 
 \begin{lstlisting}[language=HTML5,numbers=none,caption=
