--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -418,7 +418,7 @@ Subsidiary topics include assessing the maturity and suitability of current Web 
 
 \include{chapter-appendix2}
 
-\include{chapter-appendix3}
+% \include{chapter-appendix3}
 
 \printindex{}
 
