Finish first draft of chapters 1 and 2.

--- a/latex/chapter-appendix2.tex
+++ b/latex/chapter-appendix2.tex
@@ -2,12 +2,21 @@
 \chapter{Open Source Credits}
 \index{Appendix!Open Source credits@\emph{Open Source credits}}%
 
-Speakur would not have been possible without the following open source components:
+Speakur would not have been possible without the following open source components.
+The components listed here are the direct Bower\index{Bower} dependencies.
+Some of these may install other dependencies in turn.
 
 \begin{itemize}
-\item Polymer\index{Polymer} framework~\cite{polymercontributors2015}
+\item Polymer\index{Polymer} framework~\cite{polymercontributors2015}: 
+
+Web Components\index{Web Components} polyfill\index{polyfill}, core library, Core Elements\index{Core Elements} and Paper Elements\index{Paper Elements}.
 \item Firebase\index{Firebase} database service and client library~\cite{firebasecontributors2015}
 \item Marked\index{Marked library} library
+\item highlight.js\index{highlight.js} library
 \item i18next\index{i18next library} library
 \item moment.js\index{moment.js library} library
+\item lodash.js\index{lodash.js} library
+\item jQuery.js\index{jQuery} library
+\item js-md5 library
+\item pvc-globals custom element
 \end{itemize}
