--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -116,7 +116,7 @@ This report also explores several related web standards initiatives that are fre
 but are not formally grouped under them, including mutation observers,
 \index{mutation observers}
 model driven views, 
-\index{model driven views}
+\index{Model-Driven Views}
 and the CSS Flexible Boxes
 \index{Flex box} 
 and CSS Grid
