--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -37,7 +37,7 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	url = {https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Flexible_boxes},
 	abstract = {The {CSS3} Flexible Box, or flexbox, is a layout mode providing for the arrangement of elements on a page such that the elements behave predictably when the page layout must accommodate different screen sizes and different display devices.},
 	journal = {Mozilla Developer Network},
-	author = {Mozilla Contributors},
+	author = {Mozilla contributors},
 	year = {2015},
 	howpublished = {{https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Flexible\_boxes}}
 },
@@ -554,4 +554,23 @@ the community can benefit from them as well.},
 	month = feb,
 	year = {2013},
 	howpublished = {{http://www.w3.org/TR/selectors-api/}}
+},
+
+@online{w3ccontributors2015-d,
+	title = {{CSS} Grid Layout Module},
+	url = {http://www.w3.org/TR/css3-grid-layout/},
+	abstract = {This {CSS} module defines a two-dimensional grid-based layout system, optimized for user interface design. In the grid layout model, the children of a grid container can be positioned into arbitrary slots in a flexible or fixed predefined layout grid.},
+	author = {{W3C} contributors},
+	month = mar,
+	year = {2015},
+	howpublished = {{http://www.w3.org/TR/css3-grid-layout/}}
+},
+
+@online{michaelbleigh2015,
+	title = {Sneak Peak of Polymer 0.8},
+	url = {https://divshot.com/blog/web-components/polymer-0-8-sneak-peek/},
+	author = {Michael Bleigh},
+	month = feb,
+	year = {2015},
+	howpublished = {https://divshot.com/blog/web-components/polymer-0-8-sneak-peek/}
 }
